# downtube

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
controllers/: main_controller.py
core/: engine.py  workers.py
downtube/: __init__.py  __main__.py
models/: db_manager.py
views/: main_window.py  responsive_utils.py
